tests/restrict-unifi-management-policies-apply/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: unifi-source
userInfo:
  username: system:serviceaccount:unifi:unifi
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:unifi
    - system:authenticated
